[tool.poetry]
name = "gen-testcases"
version = "0.1.0"
description = ""
authors = ["Masahiro Wada <argon.argon.argon@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sympy = "^1.12"
control = "^0.10.0"
typer = "^0.12.3"


[tool.poetry.group.dev.dependencies]
ipython = "^8.24.0"
ipykernel = "^6.29.4"
isort = "^5.13.2"
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
gen_testcases = "gen_testcases.main:app"